Fixed attribution text size; Fixed footer items alignment;

--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,10 @@ main {
 }
 
 footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     padding-bottom: 32px;
 }
 
@@ -183,6 +187,10 @@ label {
 }
 
 #footerText {
+    font-size: 16px;
+}
+
+#attribution{
     font-size: 16px;
 }
 
